fix perhaps scroll on mobile device from comments

--- a/docroot/sites/all/themes/demon/assets/css/style.css
+++ b/docroot/sites/all/themes/demon/assets/css/style.css
@@ -484,6 +484,10 @@
     bottom: 0;
   }
 
+  .comment p {
+    word-wrap: break-word;
+  }
+
   .node img {
     width: 100%;
     height: auto;
